✨ Ajout support HACS
- Ajout hacs.json avec configuration
- Ajout fichier version (0.0.1)
- Réorganisation manifest.json (version en premier)

Compatible HACS maintenant !

--- a/custom_components/smart_appliance_monitor/manifest.json
+++ b/custom_components/smart_appliance_monitor/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "smart_appliance_monitor",
   "name": "Smart Appliance Monitor",
-  "codeowners": ["@legaetan"],
-  "config_flow": true,
-  "dependencies": ["recorder"],
+  "version": "0.0.1",
   "documentation": "https://github.com/legaetan/ha-smart_appliance_monitor",
-  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/legaetan/ha-smart_appliance_monitor/issues",
   "requirements": [],
-  "version": "0.0.1"
+  "codeowners": ["@legaetan"],
+  "config_flow": true,
+  "iot_class": "local_polling",
+  "dependencies": ["recorder"]
 }
 
